add_executable(algos_all_sortings all_sortings.cpp)
target_link_libraries(algos_all_sortings PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_min_order_statistic min_order_statistic.cpp)
target_link_libraries(algos_min_order_statistic PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_iterate_integers_in_file iterate_integers_in_file.cpp)
target_link_libraries(algos_iterate_integers_in_file PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_best_time_to_buy_sell_stock best_time_to_buy_sell_stock.cpp)
target_link_libraries(algos_best_time_to_buy_sell_stock PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_best_time_to_buy_sell_stock_2 best_time_to_buy_sell_stock_2.cpp)
target_link_libraries(algos_best_time_to_buy_sell_stock_2 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_best_time_to_buy_sell_stock_3 best_time_to_buy_sell_stock_3.cpp)
target_link_libraries(algos_best_time_to_buy_sell_stock_3 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_two_sum_unsorted two_sum_unsorted.cpp)
target_link_libraries(algos_two_sum_unsorted PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_two_sum_sorted two_sum_sorted.cpp)
target_link_libraries(algos_two_sum_sorted PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_three_sum three_sum.cpp)
target_link_libraries(algos_three_sum PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_max_volume_of_water max_volume_of_water.cpp)
target_link_libraries(algos_max_volume_of_water PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_max_earnings_from_taxi max_earnings_from_taxi.cpp)
target_link_libraries(algos_max_earnings_from_taxi PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_subarray_sum_equals_k subarray_sum_equals_k.cpp)
target_link_libraries(algos_subarray_sum_equals_k PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_max_contiguous_subarray max_contiguous_subarray.cpp)
target_link_libraries(algos_max_contiguous_subarray PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_top_k_frequent_elements top_k_frequent_elements.cpp)
target_link_libraries(algos_top_k_frequent_elements PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_climbing_stairs climbing_stairs.cpp)
target_link_libraries(algos_climbing_stairs PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_majority_element majority_element.cpp)
target_link_libraries(algos_majority_element PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_majority_element_2 majority_element_2.cpp)
target_link_libraries(algos_majority_element_2 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_most_frequent_even_element most_frequent_even_element.cpp)
target_link_libraries(algos_most_frequent_even_element PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_largest_increasing_subsequence largest_increasing_subsequence.cpp)
target_link_libraries(algos_largest_increasing_subsequence PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_number_of_islands number_of_islands.cpp)
target_link_libraries(algos_number_of_islands PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_surrounded_regions surrounded_regions.cpp)
target_link_libraries(algos_surrounded_regions PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_dijkstra dijkstra.cpp)
target_link_libraries(algos_dijkstra PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_subarray_product_less_than_k subarray_product_less_than_k.cpp)
target_link_libraries(algos_subarray_product_less_than_k PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_max_area_of_island max_area_of_island.cpp)
target_link_libraries(algos_max_area_of_island PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_egg_drop egg_drop.cpp)
target_link_libraries(algos_egg_drop PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_egg_drop_memoization egg_drop_memoization.cpp)
target_link_libraries(algos_egg_drop_memoization PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_egg_drop_more_optimized egg_drop_more_optimized.cpp)
target_link_libraries(algos_egg_drop_more_optimized PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_longest_common_subsequence longest_common_subsequence.cpp)
target_link_libraries(algos_longest_common_subsequence PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_matrix_multiplication matrix_mutiplication.cpp)
target_link_libraries(algos_matrix_multiplication PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_lexographically_largest_valid_sequence lexographically_largest_valid_sequence.cpp)
target_link_libraries(algos_lexographically_largest_valid_sequence PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_all_possible_strings all_possible_strings.cpp)
target_link_libraries(algos_all_possible_strings PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_alphabetically_smallest_strings alphabetically_smallest_strings.cpp)
target_link_libraries(algos_alphabetically_smallest_strings PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(algos_itch_market_data itch_market_data.cpp)
target_link_libraries(algos_itch_market_data PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(print_error print_error.cpp)
target_link_libraries(print_error
    PRIVATE
        ${PROJECT_NAME_LOWERCASE}_project_options
        ${PROJECT_NAME_LOWERCASE}_project_warnings
)