add_executable(cpp17_20_mix1 mix_1.cpp)
target_link_libraries(cpp17_20_mix1 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_mix2 mix_2.cpp)
target_link_libraries(cpp17_20_mix2 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_evaluation_order_4 evaluation_order_4.cpp)
target_link_libraries(cpp17_20_evaluation_order_4 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_structured_bindings_5 structured_bindings_5.cpp)
target_link_libraries(cpp17_20_structured_bindings_5 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_variable_template_6 variable_template_6.cpp)
target_link_libraries(cpp17_20_variable_template_6 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_variable_template_7 variable_template_7.cpp)
target_link_libraries(cpp17_20_variable_template_7 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_std_optional_8 std_optional_8.cpp)
target_link_libraries(cpp17_20_std_optional_8 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_std_variant_9 std_variant_9.cpp)
target_link_libraries(cpp17_20_std_variant_9 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_std_variant_10 std_variant_10.cpp)
target_link_libraries(cpp17_20_std_variant_10 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_std_variant_11 std_variant_11.cpp)
target_link_libraries(cpp17_20_std_variant_11 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_std_variant_12 std_variant_12.cpp)
target_link_libraries(cpp17_20_std_variant_12 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_std_variant_13 std_variant_13.cpp)
target_link_libraries(cpp17_20_std_variant_13 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_concepts_14 concepts_14.cpp)
target_link_libraries(cpp17_20_concepts_14 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_spaceship_operator_32 spaceship_operator_32.cpp)
target_link_libraries(cpp17_20_spaceship_operator_32 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_spaceship_operator_33 spaceship_operator_33.cpp)
target_link_libraries(cpp17_20_spaceship_operator_33 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_spaceship_operator_34 spaceship_operator_34.cpp)
target_link_libraries(cpp17_20_spaceship_operator_34 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_concepts_36 concepts_36.cpp)
target_link_libraries(cpp17_20_concepts_36 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_concepts_37 concepts_37.cpp)
target_link_libraries(cpp17_20_concepts_37 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_concepts_38 concepts_38.cpp)
target_link_libraries(cpp17_20_concepts_38 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_concepts_39 concepts_39.cpp)
target_link_libraries(cpp17_20_concepts_39 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_concepts_40 concepts_40.cpp)
target_link_libraries(cpp17_20_concepts_40 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_concepts_41 concepts_41.cpp)
target_link_libraries(cpp17_20_concepts_41 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_concepts_42 concepts_42.cpp)
target_link_libraries(cpp17_20_concepts_42 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_concepts_43 concepts_43.cpp)
target_link_libraries(cpp17_20_concepts_43 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_concepts_44 concepts_44.cpp)
target_link_libraries(cpp17_20_concepts_44 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_range_and_views_46 ranges_and_views_46.cpp)
target_link_libraries(cpp17_20_range_and_views_46 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_range_and_views_47 ranges_and_views_47.cpp)
target_link_libraries(cpp17_20_range_and_views_47 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_range_and_views_48 ranges_and_views_48.cpp)
target_link_libraries(cpp17_20_range_and_views_48 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_range_and_views_49 ranges_and_views_49.cpp)
target_link_libraries(cpp17_20_range_and_views_49 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_range_and_views_50 ranges_and_views_50.cpp)
target_link_libraries(cpp17_20_range_and_views_50 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_range_and_views_51 ranges_and_views_51.cpp)
target_link_libraries(cpp17_20_range_and_views_51 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_range_and_views_52 ranges_and_views_52.cpp)
target_link_libraries(cpp17_20_range_and_views_52 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_range_and_views_53 ranges_and_views_53.cpp)
target_link_libraries(cpp17_20_range_and_views_53 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_range_and_views_54 ranges_and_views_54.cpp)
target_link_libraries(cpp17_20_range_and_views_54 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_range_and_views_55 ranges_and_views_55.cpp)
target_link_libraries(cpp17_20_range_and_views_55 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_jthread_56 jthread_56.cpp)
target_link_libraries(cpp17_20_jthread_56 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_jthread_57 jthread_57.cpp)
target_link_libraries(cpp17_20_jthread_57 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_jthread_58 jthread_58.cpp)
target_link_libraries(cpp17_20_jthread_58 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_jthread_59 jthread_59.cpp)
target_link_libraries(cpp17_20_jthread_59 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_jthread_60 jthread_60.cpp)
target_link_libraries(cpp17_20_jthread_60 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_stop_source_stop_token_61 stop_source_stop_token_61.cpp)
target_link_libraries(cpp17_20_stop_source_stop_token_61 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_jthread_62 jthread_62.cpp)
target_link_libraries(cpp17_20_jthread_62 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_jthread_62_a jthread_62_a.cpp)
target_link_libraries(cpp17_20_jthread_62_a PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp17_20_throw throw.cpp)
target_link_libraries(cpp17_20_throw PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)
